--- a/package.json
+++ b/package.json
@@ -3,25 +3,34 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 4001",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.1",
+    "next": "14.0.2",
+    "next-nprogress-bar": "^2.1.2",
     "react": "^18",
+    "react-cssfx-loading": "^2.1.0",
     "react-dom": "^18",
-    "next": "14.0.2"
+    "react-hls-player": "^3.0.7",
+    "react-icons": "^4.11.0",
+    "react-intersection-observer": "^9.5.3",
+    "react-query": "^3.39.3",
+    "react-select": "^5.8.0",
+    "swiper": "^11.0.4"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.2",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.2"
+    "typescript": "^5"
   }
 }
