--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-intersection-observer": "^9.5.3",
     "react-query": "^3.39.3",
     "react-select": "^5.8.0",
+    "sharp": "^0.32.6",
     "swiper": "^11.0.4"
   },
   "devDependencies": {
