--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "axios": "^1.6.1",
     "next": "14.0.2",
-    "next-nprogress-bar": "^2.1.2",
+    "nprogress": "^0.2.0",
     "react": "^18",
     "react-cssfx-loading": "^2.1.0",
     "react-dom": "^18",
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nprogress": "^0.2.3",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
