--- a/package.json
+++ b/package.json
@@ -10,18 +10,20 @@
   },
   "dependencies": {
     "axios": "^1.6.1",
+    "firebase": "^10.7.0",
+    "hls.js": "^1.4.12",
     "next": "14.0.2",
     "nprogress": "^0.2.0",
     "react": "^18",
     "react-cssfx-loading": "^2.1.0",
     "react-dom": "^18",
-    "react-hls-player": "^3.0.7",
     "react-icons": "^4.11.0",
     "react-intersection-observer": "^9.5.3",
     "react-query": "^3.39.3",
     "react-select": "^5.8.0",
     "sharp": "^0.32.6",
-    "swiper": "^11.0.4"
+    "swiper": "^11.0.4",
+    "vnetwork-player": "^1.1.6"
   },
   "devDependencies": {
     "@types/node": "^20",
